--- a/style.css
+++ b/style.css
@@ -25,12 +25,12 @@ body {
   height: 20rem;
   display: flex;
   flex-direction: column;
-
+  border-radius: 7px;
   justify-content: space-between;
   align-items: center;
   padding: 3rem;
   background-color: #fdfdfd;
-  box-shadow: #2c2c2c 0 0 5px 0;
+  box-shadow: #2c2c2c 0 0 7px 0;
 }
 
 .input {
@@ -43,28 +43,29 @@ body {
   border: none;
 }
 
-.submit{
-    width: 100%;
-    height: 3rem;
-    margin-bottom: 1rem;
-    background-color: #228315;
-    border: none;
-    color: #f2f2f2;
-    font-size: 1rem;
+.submit {
+  width: 100%;
+  height: 3rem;
+  margin-bottom: 1rem;
+  background-color: #228315;
+  border: none;
+  color: #f2f2f2;
+  font-size: 1rem;
 }
 
-.noregister{
-    margin-left: 1rem;
-    color:  #b4b4b4;
-    cursor: pointer;
+.noregister {
+  margin-left: 1rem;
+  color: #b4b4b4;
+  cursor: pointer;
 }
 
-.textSignup{
-    margin-left: 1rem;
-    color:  #6bc04f;
-    cursor: pointer;
+.textSignup {
+  margin-left: 1rem;
+  color: #6bc04f;
+  cursor: pointer;
 }
 
-.textSignup:hover, .noregister:hover{
-    color: aqua;
+.textSignup:hover,
+.noregister:hover {
+  color: aqua;
 }
